ontology/releases/v0.5.0/classes.md
# devgraph v0 ontology classes

Specified by GitHub Issue #3: https://github.com/ZenithResearch/devgraph/issues/3.

This document defines canonical vocabulary and identifies the bounded subset implemented as Devgraph runtime labels. It does not create runtime classes by itself.

## Keep: v0 first-class labels

These labels are in v0 scope and should receive stable ids in Neo4j constraints.

| Class | Purpose | Notes |
|---|---|---|
| `Todo` | Common work-object base. | Base for Proposal, Initiative, Project, Issue, Task. |
| `Proposal` | Proposed work or conversion candidate. | Acceptance requires Decision provenance. |
| `Initiative` | Strategic work container. | Larger than Project. |
| `Project` | Delivery container. | Groups Issues/Tasks/Milestones. |
| `Issue` | PR-boundary work object. | GitHub issue may be represented by ExternalLink/SyncShadow. |
| `Task` | Commit-boundary work object. | Small execution slice. |
| `Requirement` | Required behavior/condition. | Linked from work objects. |
| `AcceptanceCriterion` | Checkable acceptance condition. | Linked from Requirement/work objects. |
| `Blocker` | Explicit impediment. | May block work or assessment. |
| `Decision` | Accepted design/scope choice. | Required for Proposal acceptance/conversion. |
| `Handoff` | Transfer/context package. | Used across entities/agents/review. |
| `ReviewPacket` | Reviewable bundle of work, evidence, criteria. | Does not imply approval. |
| `Milestone` | Grouped delivery marker. | Not a board/phase lane. |
| `Artifact` | Evidence/output object. | Files, exports, screenshots/log summaries by role. |
| `ExternalLink` | URL/reference to external system. | GitHub, docs, runbooks; not ownership of external system. |
| `SyncShadow` | Non-authoritative external metadata snapshot. | Optional; not bidirectional sync engine. |
| `StatusSet` | Named status vocabulary. | Defines allowed StatusValue entries. |
| `StatusValue` | One status value. | Belongs to StatusSet. |
| `StatusTransition` | Allowed status transition. | Descriptive contract for lifecycle services. |
| `EventReceipt` | Mutation/event evidence receipt. | First-class storage label for Issue #17; not a WorkObject/Todo subclass. |
| `HermesSessionRef` | Reference to external Hermes session id plus metrics. | Never raw transcript storage. |
| `ReadinessAssessment` | Issue/work readiness score record. | Defined in `ontology/readiness.md`. |

## Watch/defer: not v0 first-class labels

These concepts may be revisited later but are not v0 labels:

- `Subject`
- `Membership`
- `VisibilityPolicy`
- `Phase`
- `Board`
- `BoardLane`
- `SavedQuery`
- `WorkRequestRef`
- `CaseRef`
- `Role`

`Membership` and `Role` remain deferred as reified records. The additive
Rolodex vocabulary below can state a simple `MEMBER_OF` relationship, but it
does not yet model role history, appointment evidence, validity intervals, or
visibility policy.

If auth implementation appears to require `Subject`, `Membership`, or
`VisibilityPolicy`, stop and route the decision back through an explicit
authority/runtime change rather than inventing labels inside a PR.

## EventReceipt schema contract

Issue #17 owns the runtime model, but the ontology pins the receipt shape before implementation so builders do not make schema decisions inside code. `EventReceipt` records safe mutation evidence and local outbox state; it is not user-facing work, not an approval, and not external delivery proof.

Every receipt requires the common fields below and exactly one idempotency digest:
`idempotency_claim_digest` for receipts created by v0.2 or later, or the legacy
`idempotency_key_digest` for a pre-v0.2 receipt. The digest fields are mutually
exclusive; neither may be absent and both may not appear together.

| Field | Meaning |
|---|---|
| `id` | Stable receipt id generated by the outbox layer. |
| `operation` | Service operation name, such as `convert_accepted_proposal_to_issue`. |
| `subject_label` / `subject_id` | Mutated graph subject that emitted the receipt. |
| `actor_id` / `session_id` / `correlation_id` | Safe authority identifiers from Issue #15/#7 authority context. |
| `idempotency_claim_digest` | Required for v0.2+ receipts: domain-separated digest of issuer, audience, actor, and the caller-provided idempotency key. Session is excluded so the same principal can retry across sessions; raw key and reversible principal material are never stored. Mutually exclusive with `idempotency_key_digest`. |
| `idempotency_key_digest` | Required only on legacy pre-v0.2 receipts and retained for read/dispatch compatibility. New receipts do not write it, and matching legacy keys fail closed without returning the legacy receipt. Mutually exclusive with `idempotency_claim_digest`. |
| `status` | One of the pinned outbox status values. |
| `attempt_count` | Local dry-run dispatch attempt count. |
| `next_attempt_at` | Retry scheduling timestamp, or empty when immediately eligible/not applicable. |
| `created_at` / `updated_at` | Receipt timestamps. |
| `redacted_summary` | Event summary after `redact_event`; no raw payload/credential material. |
| `last_error_summary` | Redacted local failure summary only. |

### Exact `devgraph.issue.create.v1` receipt profile

Receipts whose `operation` is exactly `devgraph.issue.create.v1` additionally
require both fields below as 64-character lowercase hexadecimal SHA-256 values:

| Field | Meaning |
|---|---|
| `request_digest_sha256` | Digest of the domain-separated, materialized canonical Issue-create request. It participates in duplicate-scope comparison but does not enter `idempotency_claim_digest`. |
| `idempotency_key_digest_sha256` | Plain SHA-256 telemetry for the exact raw idempotency key, bound by the verified secS projection. It is not the legacy `idempotency_key_digest`, does not replace `idempotency_claim_digest`, and is not unique across principals. |

The remaining bounded secS context, receiver-policy, verifier-key, and authority
projection digests are retained in `redacted_summary`. Duplicate status is
result/audit evidence and never rewrites the original persisted receipt. Raw
keys, signatures, request title/description, policy rules, and private evidence
are excluded. No uniqueness constraint is created for either exact-operation
telemetry field.

Pinned status values: `pending`, `dispatched_dry_run`, `retry_scheduled`, and `failed`.

Non-claims: `EventReceipt` does not prove exactly-once external delivery, Matrix/webhook/eventbus publication, production deployment, or malicious database-operator resistance.

## Excluded from v0

These are explicitly excluded as first-class v0 classes:

- `Case`
- `Subcase`
- `WorkRequest`
- `WorkOrder`
- `ProductFramework`
- `ProcessTemplate`
- `Repository`
- `Release`
- `Deployment`
- `Commit`
- `Deliverable`
- `LinearSync`
- `PublicPortal`

External systems and deliverable-like things are represented with `Artifact`, `ExternalLink`, roles, or optional `SyncShadow`, not dedicated classes.

## Canonical cross-Zenith classes outside the v0 runtime

| Class | Purpose | Runtime projection |
|---|---|---|
| `Arena` | Continuing area of responsibility containing Initiatives and parentless Tasks. | `runtimeLabel: false`; optional membership is separate from Work parentage; see `arenas.md`. |
| `Actor` | Compatibility name for `Entity` from v0.4.0. | `equivalentClass: Entity`; `runtimeLabel: false`; existing references remain valid. |
| `Entity` | Common directory and provenance identity for a named participant in work. | `runtimeLabel: false`; preferred directory base in v0.5.0. |
| `Person` | Human entity. | `subClassOf: Entity`; `runtimeLabel: false`. |
| `Agent` | Software, AI, service, or other automated entity. | `subClassOf: Entity`; `runtimeLabel: false`. |
| `Organization` | Collective entity such as a company, project, institution, or working group. | `subClassOf: Entity`; `runtimeLabel: false`. |
| `ZenithRepository` | Sovereign Git project conforming to the canonical Zenith filesystem contract. | `runtimeLabel: false`; reference the repository with `ExternalLink`, optional provider metadata with `SyncShadow`, and selected outputs with `Artifact`. |

### Rolodex boundary

The Rolodex hierarchy was introduced in v0.4.0. v0.5.0 prefers `Entity`
and retains `Actor` as an equivalent compatibility name. It lets
other Zenith systems exchange stable Entity references and relationship
semantics before Devgraph commits a storage schema, mutation API, or
visibility model. Adding these classes does not create Neo4j labels,
constraints, Work API kinds, routes, or writable directory operations.

`Entity` is a directory/provenance concept, not an authentication `Subject`,
credential, keypair, wallet, secS capability, or `.castaway` vault. `Person`,
`Agent`, and `Organization` are disjoint intended categories even though this
release does not publish an OWL disjointness axiom. An Organization is an
Entity because it may own or receive attribution for work as a collective.

Public or generally readable Rolodex data must not contain private keys,
passphrases, credentials, recovery material, raw capability bodies, private
contact details, or unreviewed personal data. Public references may use
`HAS_EXTERNAL_LINK`; private contact-point storage remains deferred until a
visibility/export policy is accepted.

An existing verified `actor_id` may resolve to an `Entity` in a future runtime
projection, but receipt text or caller payloads never establish identity,
membership, assignment, or authority by themselves.

The `ZenithRepository` contract requires `README.md`, `AGENTS.md`, a root `<repo_name>.md` map of content, and the `capture/`, `notes/`, `docs/`, `src/`, `out/`, and `archive/` knowledge-to-deliverable surfaces. The machine-readable contract is published as `repository-contract.json`.

Filesystem conformance does not prove repository ownership, network admission, machine authority, issuer or validator trust, deployment, publication, or deliverable correctness. Do not create a `Repository` or `ZenithRepository` runtime model, label, constraint, migration, or API resource without an accepted runtime-boundary change.

## Verification

```bash
rg "Board|Phase|WorkRequest|Proposal|HermesSessionRef" ontology/classes.md
python3 -m pytest tests/docs/test_ontology_boundaries.py -q
```
